# gh-search

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: codeql-analysis.yml  lint-and-test.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml  release-drafter.yml
ghsearch/: cli.py  client.py  filters.py  gh_search.py  main.py  output.py  terminal.py
tests/unit/: __init__.py  client_test.py  conftest.py  filters_test.py  gh_search_test.py  main_test.py  output_test.py  terminal_test.py
