[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-search"
dynamic = ["version"]
description = "Github search from the cli"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Janek Lasocki-Biczysko" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click~=8.1.7",
    "click-config-file~=0.6.0",
    "pygithub~=2.3.0",
    "ruamel.yaml~=0.18.6",
]

[dependency-groups]
dev = [
    "black~=24.8.0",
    "coverage~=7.6.0",
    "flake8~=7.1.0",
    "isort~=5.13.2",
    "mypy~=1.11.1",
    "pip-tools~=7.4.1",
    "pytest-mock~=3.14.0",
    "pytest~=8.3.2",
]

[project.scripts]
gh-search = "ghsearch.cli:cli"

[project.urls]
Homepage = "https://github.com/janeklb/gh-search"

[tool.hatch.version]
path = "version.txt"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["ghsearch"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_no_return = true
disallow_incomplete_defs = true
show_error_codes = true
pretty = false

[tool.pytest.ini_options]
testpaths = ["tests"]
